Java 21 all the things