@@ -42,7 +42,7 @@ public class ChatLogData implements IChatMessageProcessor {
 
     private void add(ChatMessage message) {
         LogChatMessage log = new LogChatMessage(message);
-        messages.add(0, log);
+        messages.addFirst(log);
         AdvancedChatLog.logChatMessage(message.getOriginalText());
         Screen screen = MinecraftClient.getInstance().currentScreen;
         if (screen instanceof ChatLogScreen) {
@@ -51,7 +51,7 @@ public class ChatLogData implements IChatMessageProcessor {
     }
 
     private void add(LogChatMessage message) {
-        messages.add(0, message);
+        messages.addFirst(message);
     }
 
     @Override
@@ -66,7 +66,7 @@ public class ChatLogData implements IChatMessageProcessor {
         add(message.shallowClone(width));
         while (messages.size()
                 > ChatLogConfigStorage.General.STORED_LINES.config.getIntegerValue()) {
-            messages.remove(messages.size() - 1);
+            messages.removeLast();
         }
     }
 
@@ -89,7 +89,7 @@ public class ChatLogData implements IChatMessageProcessor {
         LogChatMessageSerializer serializer = new LogChatMessageSerializer();
         List<LogChatMessage> messages = new ArrayList<>();
         for (int i = 0; i < lines && i < ChatLogData.getInstance().getMessages().size(); i++) {
-            messages.add(0, ChatLogData.getInstance().getMessages().get(i));
+            messages.addFirst(ChatLogData.getInstance().getMessages().get(i));
         }
         JsonArray array = new JsonArray();
         for (LogChatMessage message : messages) {
